2014-04-28  Tim Horton  <timothy_horton@apple.com>

        REGRESSION (r167845): ASSERT(!m_renderView.needsLayout()) in svg/custom/bug79798.html
        https://bugs.webkit.org/show_bug.cgi?id=132297

        * platform/wk2/TestExpectations:
        Skip the test.

2014-04-28  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r167871.
        https://bugs.webkit.org/show_bug.cgi?id=132290

        broke a newmulticol test (spanner-nested-dynamic) (Requested
        by thorton on #webkit).

        Reverted changeset:

        "Store the containing region map inside the flow thread"
        https://bugs.webkit.org/show_bug.cgi?id=131647
        http://trac.webkit.org/changeset/167871

2014-04-28  Mark Hahnenberg  <mhahnenberg@apple.com>

        Deleting properties poisons objects
        https://bugs.webkit.org/show_bug.cgi?id=131551

        Reviewed by Oliver Hunt.

        New JS regress test. We're ~3.5x faster on this microbenchmark now.

        * js/regress/delete-a-few-properties-then-get-by-id-expected.txt: Added.
        * js/regress/delete-a-few-properties-then-get-by-id.html: Added.
        * js/regress/script-tests/delete-a-few-properties-then-get-by-id.js: Added.
        (MyObject):
        (foo):

2014-04-28  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        Unreviewed GTK gardening.

        * platform/gtk/TestExpectations: Flagged some tests.

2014-04-28  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        Unreviewed GTK gardening.

        * platform/gtk/TestExpectations: Flagged some tests.

2014-04-28  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        Unreviewed GTK gardening. Adding failure expectations for 6
        failing and flaky tests. Removed 1.

        * platform/gtk/TestExpectations:

2014-04-28  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        [GTK] Review media bugs flags
        https://bugs.webkit.org/show_bug.cgi?id=132246

        Reviewed by Philippe Normand.
