@@ -107,5 +107,3 @@ webkit.org/b/131318 http/tests/inspector/replay/document-last-modified-fallback-
 # Expando properties on attribute nodes disappear
 webkit.org/b/88045 fast/dom/gc-attribute-node.html [ Failure Pass ]
 
-webkit.org/b/132238 fast/events/shadow-event-path.html [ Failure ]
-webkit.org/b/132238 fast/events/shadow-event-path-2.html [ Failure ]
