@@ -1,3 +1,13 @@
+2014-04-28  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Layout Test fast/events/shadow-event-path[-2].html is failing
+        https://bugs.webkit.org/show_bug.cgi?id=132238
+
+        Add the file that was supposed to be committed in r167840.
+
+        * TestExpectations:
+        * fast/events/resources/shadow-event-path-shared.js: Added.
+
 2014-04-28  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION (r167845): ASSERT(!m_renderView.needsLayout()) in svg/custom/bug79798.html
